# Gateware

./: .gitignore  CMakeLists.txt  Doxyfile  Doxyfile2  LICENSE.md  LinuxSetup  LinuxSetup.sh  MacSetup  MacSetup.command  Permission.command  README.md  VERSION.txt  WinSetup.bat  gateware.ver  iOSSetup.command
Code Blocks/: Gateware.workspace  Gateware.workspace.layout
Code Blocks/GBufferedInput/: GBufferedInput.cbp  GBufferedInput.depend  GBufferedInput.layout
Code Blocks/GFile/: GFile.cbp  GFile.layout
Code Blocks/GInput/: GInput.cbp  GInput.depend  GInput.layout
Code Blocks/GLog/: GLog.cbp  GLog.layout
Code Blocks/GWindow/: GWindow.cbp  GWindow.layout
Code Blocks/Unit Tests/: Unit Tests.cbp  Unit Tests.layout  g_binary_test.gtest  g_test.gtest
Documentation/In-house Documentation/: GatewareHyperViserLogin.txt  gatewarecreds.txt
Documentation/html/: CATCH_8hpp_source.html  Common_8h_source.html  DLL__Export__Symbols_8h_source.html  GAudio_8h_source.html  GBroadcasting_8h_source.html  GBufferedInputTestListener_8h_source.html  GBufferedInput_8h_source.html  GControllerInputDefines_8h_source.html  GController_8h_source.html  GDefines_8h_source.html  GDirectX11Surface_8h_source.html  GFile_8h_source.html  GGraphicsDefines_8h_source.html  GInput_8h_source.html  GInterface_8h_source.html  GKeyDefines_8h_source.html  GListener_8h_source.html  GLog_8h_source.html  GMathDefines_8h_source.html  (+798 more)
Interface/: MainPage.dox
Source/: CMakeLists.txt  GVersion.hpp  Version.format
Source/G_Audio/: #GAudioLinux.hpp#  .#GAudioLinux.hpp  CMakeLists.txt  GAudio.cpp  GAudio.mm  GAudioLinux (ThreadedMainLoop).hpp  GAudioLinux.hpp  GAudioMac.hpp  GAudioWin.hpp
Source/G_Graphics/: CMakeLists.txt  GDirectX11Surface.cpp  GOpenGLESSurface.cpp  GOpenGLSurface.cpp  GOpenGLSurface.mm
Source/G_Math/: CMakeLists.txt  GMatrix.cpp  GQuaternion.cpp  GVector.cpp  G_Math.sln
Source/G_Math/G_Math/: G_Math.vcxproj
Source/G_System/: CMakeLists.txt  GBIGlobalNamespace.h  GBI_Callback.cpp  GBI_Static.cpp  GBufferInput.cpp  GBufferInput.mm  GBufferedInput.cpp  GBufferedInput.mm  GController.cpp  GController.mm  GController_Callback.hpp  GController_Static.h  GFile.cpp  GI_Callback.cpp  GI_Static.cpp  GInput.cpp  GInput.mm  GKeyDefines.h  GLog.cpp  GResponder.mm  GUtility.h  GWindow.cpp  GWindow.mm  GWindow_Callback.cpp  GWindow_Callback.hpp
Unit Tests/: CATCH.hpp  CMakeLists.txt  Common.cpp  Common.h  UnitTestMain.cpp
Unit Tests/CodeBlocks/: default.workspace  default.workspace.layout
Unit Tests/CodeBlocks/GTests/: GTests.cbp  GTests.layout
Unit Tests/GFile_TestFolder/: testFile2.txt
Unit Tests/G_Audio/: CMakeLists.txt  GAudioCommon.h  GAudioTests.cpp
Unit Tests/G_Graphics/: GDirectX11SurfaceTest.cpp  GOpenGLESSurfaceTest.cpp  GOpenGLSurfaceTest.cpp
Unit Tests/G_Math/: GMatrixTest.cpp  GQuaternionTest.cpp  GVectorTest.cpp
Unit Tests/G_System/: #GFileTest.cpp#  Common.h  GBufferedInputTestListener.cpp  GBufferedInputTestListener.h  GBufferedInputTests.cpp  GControllerTest.cpp  GControllerTestListener.cpp  GControllerTestListener.h  GFileTest.cpp  GInputTests.cpp  GLogTest.cpp  GTests.mm  GWindowTestListener.cpp  GWindowTestListener.h  GWindowTests.cpp  TestListener.cpp
Unit Tests/Source/G_Core/: UnitTestMain.cpp
Unit Tests/Source/G_System/: Common.cpp  Common.h  GBufferedInputTests.cpp  GFileTest.cpp  GInputTests.cpp  GLogTest.cpp  GTests.mm  GWindowTestListener.h  GWindowTests.cpp  TestListener.cpp  TestListener.h
Unit Tests/Visual Studio/GatewareTestSuite/: GatewareTestSuite.sln  GatewareTestSuite.vcxproj
Unit Tests/Visual Studio/GatewareTestSuite DLL/: DLL_clean.bat  DLL_copy_amd64_debug.bat  DLL_copy_amd64_release.bat  DLL_copy_i386_debug.bat  DLL_copy_i386_release.bat  GatewareTestSuite DLL.vcxproj
Unit Tests/Visual Studio/GatewareTestSuite DLL Explicit/: GatewareTestSuite DLL Explicit.vcxproj
Unit Tests/Visual Studio/GatewareTestSuite DLL Explicit/TestDirectory/: DONOTDELETE.txt
Unit Tests/Visual Studio/GatewareTestSuite DLL/TestDirectory/: DONOTDELETE.txt
Unit Tests/Visual Studio/GatewareTestSuite/TestDirectory/: DONOTDELETE.txt  g_binary_test.gtest  g_test.gtest
Unit Tests/Visual Studio/SharedTestSource/: SharedTestSource.vcxitems  SharedTestSource.vcxitems.filters
Unit Tests/XCode/Gateware/GTests/GTests.xcodeproj/: project.pbxproj
Unit Tests/XCode/Gateware/GTests/TestDirectory/: DONOTDELETE.txt
Unit Tests/XCode/Gateware/Gateware.xcodeproj/: project.pbxproj
Unit Tests/XCode/Gateware/Gateware.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Visual Studio/: Gateware.VC.VC.opendb  Gateware.sln
html/: _g_broadcasting_8h_source.html  _g_defines_8h_source.html  _g_file_8h_source.html  _g_interface_8h_source.html  _g_listener_8h_source.html  _g_log_8h_source.html  _g_multi_threaded_8h_source.html  _g_single_threaded_8h_source.html  annotated.html  class_g_w_1_1_c_o_r_e_1_1_g_broadcasting-members.html  class_g_w_1_1_c_o_r_e_1_1_g_broadcasting.html  class_g_w_1_1_c_o_r_e_1_1_g_broadcasting.js  class_g_w_1_1_c_o_r_e_1_1_g_file-members.html  class_g_w_1_1_c_o_r_e_1_1_g_file.html  class_g_w_1_1_c_o_r_e_1_1_g_file.js  class_g_w_1_1_c_o_r_e_1_1_g_interface-members.html  class_g_w_1_1_c_o_r_e_1_1_g_interface.html  class_g_w_1_1_c_o_r_e_1_1_g_interface.js  class_g_w_1_1_c_o_r_e_1_1_g_listener-members.html  class_g_w_1_1_c_o_r_e_1_1_g_listener.html  class_g_w_1_1_c_o_r_e_1_1_g_listener.js  class_g_w_1_1_c_o_r_e_1_1_g_log-members.html  class_g_w_1_1_c_o_r_e_1_1_g_log.html  class_g_w_1_1_c_o_r_e_1_1_g_log.js  class_g_w_1_1_c_o_r_e_1_1_g_multi_threaded-members.html  class_g_w_1_1_c_o_r_e_1_1_g_multi_threaded.html  class_g_w_1_1_c_o_r_e_1_1_g_single_threaded-members.html  class_g_w_1_1_c_o_r_e_1_1_g_single_threaded.html  classes.html  dir_a39c72048c61deae67098fe16c2b3d67.html  dir_a39c72048c61deae67098fe16c2b3d67.js  dir_b7263c2df3abed61e1897d5e9e534860.html  dir_b7263c2df3abed61e1897d5e9e534860.js  dir_eda34a81377ca4b30a34b949f0be067a.html  dir_eda34a81377ca4b30a34b949f0be067a.js  files.html  functions.html  functions_func.html  hierarchy.html  hierarchy.js  (+14 more)
(+1973 files in other folders)
